--- a/games/templates/payment.html
+++ b/games/templates/payment.html
@@ -17,9 +17,9 @@
       <input type="hidden" name="pid" value={{pid}}>
       <input type="hidden" name="sid" value={{sid}}>
       <input type="hidden" name="amount" value={{game.price}}>
-      <input type="hidden" name="success_url" value="http://localhost:8000/payment/{{game.id}}/success">
-      <input type="hidden" name="cancel_url" value="http://localhost:8000/payment/{{game.id}}/cancel">
-      <input type="hidden" name="error_url" value="http://localhost:8000/payment/{{game.id}}/error">
+      <input type="hidden" name="success_url" value="{{request.scheme}}://{{request.get_host}}/payment/{{game.id}}/success">
+      <input type="hidden" name="cancel_url" value="{{request.scheme}}://{{request.get_host}}/payment/{{game.id}}/cancel">
+      <input type="hidden" name="error_url" value="{{request.scheme}}://{{request.get_host}}/payment/{{game.id}}/error">
       <input type="hidden" name="checksum" value="{{checksum}}">
       Amount to be paid: {{game.price}}€
       <div class="d-flex justify-content-center">
